--- a/programming011.librarymanagement/Views/AuthorsUserControl.xaml
+++ b/programming011.librarymanagement/Views/AuthorsUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LibraryManagement.UI.Views.BooksUserControl"
+﻿<UserControl x:Class="LibraryManagement.UI.Views.AuthorsUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -15,27 +15,25 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
             <WrapPanel  Height="60" HorizontalAlignment="Left">
-                <Button Content="Add" Command="{Binding OpenSaveBook}" FontSize="25" Height="40" Width="160" Style="{StaticResource btnGreen}" Margin="15 0 15 0" VerticalAlignment="Center"/>
-                <Button Content="Update" Command="{Binding OpenUpdateBook}" FontSize="25" Height="40" Width="160" Style="{StaticResource btnGreen}" Margin="15 0 15 0" VerticalAlignment="Center"/>
-                <Button Content="Delete" Command="{Binding DeleteBook}" FontSize="25" Height="40" Width="160" Style="{StaticResource btnGreen}" Margin="15 0 15 0" VerticalAlignment="Center"/>
+                <Button Content="Add" Command="{Binding OpenSaveAuthor}" FontSize="25" Height="40" Width="160" Style="{StaticResource btnGreen}" Margin="15 0 15 0" VerticalAlignment="Center"/>
+                <Button Content="Update" Command="{Binding OpenUpdateAuthor}" FontSize="25" Height="40" Width="160" Style="{StaticResource btnGreen}" Margin="15 0 15 0" VerticalAlignment="Center"/>
+                <Button Content="Delete" Command="{Binding DeleteAuthor}" FontSize="25" Height="40" Width="160" Style="{StaticResource btnGreen}" Margin="15 0 15 0" VerticalAlignment="Center"/>
             </WrapPanel>
             <Line Stretch="Fill" Stroke="Black" X2="1" VerticalAlignment="Bottom" Margin="0 20 0 0"/>
         </StackPanel>
 
         <ScrollViewer Grid.Row="2" Visibility="Visible">
-            <ListView x:Name="MainList" ItemsSource="{Binding BookModels}"
-                        Style="{StaticResource listViewCustom}" SelectedIndex="{Binding SelectedBookIndex}">
+            <ListView x:Name="MainList" ItemsSource="{Binding AuthorModels}"
+                        Style="{StaticResource listViewCustom}" SelectedIndex="{Binding SelectedAuthorIndex}">
                 <ListView.View>
                     <GridView >
                         <GridViewColumn  DisplayMemberBinding="{Binding Id}"  Header="Id" Width="auto"/>
-                        <GridViewColumn  DisplayMemberBinding="{Binding Title}" Header="Title" Width="auto"/>
-                        <GridViewColumn  DisplayMemberBinding="{Binding Genre}" Header="Genre" Width="auto"/>
-                        <GridViewColumn  DisplayMemberBinding="{Binding PageCount}" Header="Page Count" Width="auto"/>
-                        <GridViewColumn  DisplayMemberBinding="{Binding PublishedDate}" Header="Publish Date" Width="auto"/>
+                        <GridViewColumn  DisplayMemberBinding="{Binding Firstname}" Header="Firstname" Width="auto"/>
+                        <GridViewColumn  DisplayMemberBinding="{Binding Lastname}" Header="Lastname" Width="auto"/>
+                        <GridViewColumn  DisplayMemberBinding="{Binding Email}" Header="Email" Width="auto"/>
                     </GridView>
                 </ListView.View>
             </ListView>
         </ScrollViewer>
     </Grid>
 </UserControl>
-
