--- a/programming011.librarymanagement/Views/AdminWindow.xaml
+++ b/programming011.librarymanagement/Views/AdminWindow.xaml
@@ -42,7 +42,7 @@
                                         <DropShadowBitmapEffect Color="Black" Direction="320" Softness="1" ShadowDepth="10" Opacity="0.5" />
                                     </Button.BitmapEffect>
                                 </Button>
-                                <Button Width="200" Height="60" Style="{StaticResource baseButton}" Command="{Binding OpenBooks}" Content="Books and Authors" Foreground="Black" FontSize="20"  Margin="0 10 0 10">
+                                <Button Width="200" Height="60" Style="{StaticResource baseButton}" Command="{Binding OpenAuthorBooks}" Content="Books and Authors" Foreground="Black" FontSize="20"  Margin="0 10 0 10">
                                     <Button.BitmapEffect>
                                         <DropShadowBitmapEffect Color="Black" Direction="320" Softness="1" ShadowDepth="10" Opacity="0.5" />
                                     </Button.BitmapEffect>
